non working FLOSS implementation
just random debug stuff to figure out why CACs are all 1s

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ bookshelf/code/df_list.txt
 bookshelf/code/building_features.npy
 bookshelf/code/building_features_seq.npy
 bookshelf/code/building_MP_CACs.npy
+bookshelf/code/test_initial_data.npy
